--- a/index.html
+++ b/index.html
@@ -7,88 +7,88 @@
     <style>
         body {
             margin: 0;
-            font-family: Arial, sans-serif;
+            font-family: 'Segoe UI', sans-serif;
             background: #ffffff;
-            padding: 15px;
+            display: flex;
+            justify-content: center;
+            padding: 20px;
         }
 
         .container {
+            background: #ffffff;
+            width: 100%;
             max-width: 1000px;
-            margin: auto;
-            background: #fff;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+            padding: 25px;
+            border-radius: 12px;
+            box-shadow: 0 8px 20px rgba(0,0,0,0.1);
         }
 
         h2 {
             text-align: center;
             margin-bottom: 20px;
+            color: #333;
         }
 
-        .add-btn {
-            background: #333;
-            color: white;
+        button {
             padding: 8px 15px;
             border: none;
-            border-radius: 5px;
+            border-radius: 6px;
+            background: #444;
+            color: white;
             cursor: pointer;
+            transition: 0.3s;
         }
 
-        .add-btn:hover {
-            background: #000;
-        }
-
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-top: 15px;
-        }
-
-        th, td {
-            padding: 8px;
-            text-align: center;
-            border-bottom: 1px solid #ddd;
-        }
-
-        th {
-            background: #f5f5f5;
-        }
-
-        input {
-            width: 70px;
-            padding: 5px;
-            text-align: center;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-        }
-
-        input[type="text"] {
-            width: 120px;
+        button:hover {
+            background: #222;
         }
 
         .delete-btn {
             background: #d9534f;
-            color: white;
-            border: none;
-            padding: 5px 10px;
-            border-radius: 4px;
-            cursor: pointer;
         }
 
         .delete-btn:hover {
             background: #b52b27;
         }
 
-        .total {
-            text-align: right;
-            font-size: 18px;
-            font-weight: bold;
-            margin-top: 15px;
+        table {
+            width: 100%;
+            margin-top: 20px;
+            border-collapse: collapse;
         }
 
-        /* Mobile Responsive */
-        @media(max-width:768px){
+        th {
+            background: #f2f2f2;
+            padding: 10px;
+            font-size: 14px;
+        }
+
+        td {
+            padding: 8px;
+            text-align: center;
+            border-bottom: 1px solid #eee;
+        }
+
+        input {
+            width: 70px;
+            padding: 5px;
+            border-radius: 4px;
+            border: 1px solid #ccc;
+            text-align: center;
+        }
+
+        input[type="text"] {
+            width: 120px;
+        }
+
+        .total {
+            font-size: 20px;
+            font-weight: bold;
+            margin-top: 20px;
+            text-align: right;
+        }
+
+        @media (max-width: 768px) {
             table, thead, tbody, th, td, tr {
                 display: block;
                 width: 100%;
@@ -100,16 +100,16 @@
 
             tr {
                 margin-bottom: 15px;
+                background: #fafafa;
                 padding: 10px;
-                border: 1px solid #eee;
                 border-radius: 8px;
-                box-shadow: 0 3px 8px rgba(0,0,0,0.05);
+                box-shadow: 0 4px 10px rgba(0,0,0,0.05);
             }
 
             td {
                 text-align: right;
+                padding: 6px;
                 position: relative;
-                padding-left: 50%;
             }
 
             td::before {
@@ -117,7 +117,6 @@
                 position: absolute;
                 left: 10px;
                 font-weight: bold;
-                text-align: left;
             }
         }
     </style>
@@ -128,16 +127,16 @@
 <div class="container">
     <h2>Carpet Area Calculator (Feet & Inch)</h2>
 
-    <button class="add-btn" onclick="addRow()">+ Add Room</button>
+    <button onclick="addRow()">+ Add Room</button>
 
     <table id="roomTable">
         <tr>
-            <th>Room</th>
-            <th>Length Ft</th>
-            <th>Length In</th>
-            <th>Width Ft</th>
-            <th>Width In</th>
-            <th>Area</th>
+            <th>Room Name</th>
+            <th>Length (Ft)</th>
+            <th>Length (In)</th>
+            <th>Width (Ft)</th>
+            <th>Width (In)</th>
+            <th>Area (Sqft)</th>
             <th>Action</th>
         </tr>
     </table>
@@ -153,34 +152,23 @@ function addRow() {
     let row = table.insertRow(-1);
 
     row.innerHTML = `
-        <td data-label="Room"><input type="text" placeholder="Room"></td>
-        <td data-label="Length Ft"><input type="number" onkeydown="moveOnEnter(event)"></td>
-        <td data-label="Length In"><input type="number" onkeydown="moveOnEnter(event)"></td>
-        <td data-label="Width Ft"><input type="number" onkeydown="moveOnEnter(event)"></td>
-        <td data-label="Width In"><input type="number" onkeydown="moveOnEnter(event)"></td>
-        <td data-label="Area" class="area">0</td>
+        <td data-label="Room Name"><input type="text" placeholder="Room Name"></td>
+        <td data-label="Length Ft"><input type="number" value="0" onchange="calculate()"></td>
+        <td data-label="Length In"><input type="number" value="0" onchange="calculate()"></td>
+        <td data-label="Width Ft"><input type="number" value="0" onchange="calculate()"></td>
+        <td data-label="Width In"><input type="number" value="0" onchange="calculate()"></td>
+        <td data-label="Area (Sqft)" class="area">0</td>
         <td data-label="Action">
             <button class="delete-btn" onclick="deleteRow(this)">Delete</button>
         </td>
     `;
 }
 
-function moveOnEnter(e){
-    if(e.key === "Enter"){
-        let inputs = Array.from(document.querySelectorAll("input"));
-        let index = inputs.indexOf(e.target);
-        if(index > -1 && index < inputs.length - 1){
-            inputs[index + 1].focus();
-        }
-        calculate();
-    }
-}
-
-function calculate(){
+function calculate() {
     let table = document.getElementById("roomTable");
     let total = 0;
 
-    for(let i=1;i<table.rows.length;i++){
+    for (let i = 1; i < table.rows.length; i++) {
         let cells = table.rows[i].cells;
 
         let lf = parseFloat(cells[1].children[0].value) || 0;
@@ -188,8 +176,8 @@ function calculate(){
         let wf = parseFloat(cells[3].children[0].value) || 0;
         let wi = parseFloat(cells[4].children[0].value) || 0;
 
-        let length = lf + (li/12);
-        let width = wf + (wi/12);
+        let length = lf + (li / 12);
+        let width = wf + (wi / 12);
 
         let area = length * width;
 
@@ -200,8 +188,9 @@ function calculate(){
     document.getElementById("totalArea").innerText = total.toFixed(2);
 }
 
-function deleteRow(btn){
-    btn.parentElement.parentElement.remove();
+function deleteRow(button) {
+    let row = button.parentElement.parentElement;
+    row.remove();
     calculate();
 }
 </script>
